--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- for FF, Chrome, Opera -->
-<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
-<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+	<!-- for FF, Chrome, Opera -->
+	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
 
-<!-- for IE -->
-<link rel="icon" type="image/x-icon" href="img/logo.png" >
-<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-
+	<!-- for IE -->
+	<link rel="icon" type="image/x-icon" href="img/logo.png" >
+	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script src="scroll.js"></script>
 
 <html lang="en">
 <head>
@@ -18,10 +20,10 @@
 	<title>WEI CHENG</title>
 </head>
 <body id="body">
-	<div id="logo">
+	<div class="logo">
 		<img src="img/logo.png" alt="">
 		<br>
-		<div id="navi">
+		<div class="navbar">
 			<span><a href="index.html" class="light btn_nav">About</a></span>
 			<span><a href="projects.html" class="btn_nav">Projects</a></span>
 			<span><a href="resume.html" class="btn_nav">Resume</a></span>
@@ -32,14 +34,18 @@
 		<img id="avatar" src="img/avatar.png" alt="">
 		<h1>About Wei Cheng</h1>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Wei Cheng, a senior student major in Information Management in National Sun-Yat sen University, Taiwan. I am currently exchange at San Diego State University, California. 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for having interest to know me more. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am currently exchange at San Diego State University, California for one semester. 
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism department. "Taking technologies into universities. is our main goal during internship.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism department. "Taking technologies into universities." is our main goal during internship.
 			<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!), swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic.
 			</p>
 		</div>
 		<div id="skill">
+			<h1>Education</h1>
+			B.A. of Information Management System,
+			National Sun-Yat sen University
+
 			<h1>Skills</h1>
 			<li>HTML, CSS, javascript</li>
 			<li>java</li>
@@ -48,16 +54,17 @@
 			<li>SQLite</li>
 			<li>Firebase</li>
 			<br>
-			<li>Photoshop</li>
-			<li>Illustrator</li>
+			<li>Adobe Photoshop</li>
+			<li>Adobe Illustrator</li>
 			<li>Sketch</li>
 			<li>Android Studio</li>
 		</div>
 	</div>
 	<div class="footer">
-<!-- 		<span><a href="#" class="fa fa-facebook"></a></span>
+		<span id="connected">Connected with me:</span><br>
+		<span><a href="#" class="fa fa-facebook"></a></span>
 		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
-		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span> -->
+		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span>
 	</div>
 </body>
 </html>
