--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- for FF, Chrome, Opera -->
-<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
-<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- for FF, Chrome, Opera -->
+	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
 
-<!-- for IE -->
-<link rel="icon" type="image/x-icon" href="img/logo.png" >
-<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-
+	<!-- for IE -->
+	<link rel="icon" type="image/x-icon" href="img/logo.png" >
+	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="scroll.js"></script>
 
 <html lang="en">
 <head>
@@ -17,14 +19,14 @@
 	<title>WEI CHENG-resume</title>
 </head>
 <body id="body">
-	<div id="logo">
+	<div class="logo">
 		<img src="img/logo.png" alt="">
 		<br>
-		<div id="navi">
+		<nav id="navbar">
 			<span><a href="index.html" class="btn_nav">About</a></span>
 			<span><a href="projects.html" class="btn_nav">Projects</a></span>
 		<span><a href="resume.html" class="light btn_nav">Resume</a></span>
-		</div>
+		</nav>
 	</div>
 	<div class="center">
 		<embed src="CHENG WEI RESUME.pdf" width="800px" height="1180px" />
