--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>WEI CHENG</title>
+	<title>WEI CHENG | About</title>
 </head>
 <body id="body">
-	<div class="logo">
-		<img src="img/logo.png" alt="">
+	<div class="header">
+		<img class="logo" src="img/logo.png" alt="">
 		<br>
 		<div class="navbar">
 			<span><a href="index.html" class="light btn_nav">About</a></span>
 			<span><a href="projects.html" class="btn_nav">Projects</a></span>
-			<span><a href="resume.html" class="btn_nav">Resume</a></span>
+			<span><a href="resume.html" class="btn_nav">Artwork</a></span>
 		</div>
 	</div>
 	<div class="content">
@@ -40,29 +40,40 @@
 			<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!), swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic.
 			</p>
+			<h4>Resume :<br>
+				<a target="_blank" href="WEI CHENG.pdf">
+				<img id="pdf" src="img/pdf.png" alt=""></a>
+			</h4>
 		</div>
 		<div id="skill">
 			<h1>Education</h1>
-			B.A. of Information Management System,
-			National Sun-Yat sen University
+			<h4>B.A. of Information Management System<br></h4>
+			National Sun-Yat sen University, Kaohsiung Taiwan<br>
+			<br>
+			<h4>Exchange Student of Information Managament<br></h4>
+			San Diego State University, California US
+			<br>
 
-			<h1>Skills</h1>
+			<h1>Programming</h1>
 			<li>HTML, CSS, javascript</li>
 			<li>java</li>
-			<br>
 			<li>MySQL</li>
 			<li>SQLite</li>
 			<li>Firebase</li>
 			<br>
+
+			<h1>Tools</h1>
+			<li>Sketch</li>
 			<li>Adobe Photoshop</li>
 			<li>Adobe Illustrator</li>
-			<li>Sketch</li>
+			<li>Adobe Premiere</li>
+			<li>iMovie</li>
 			<li>Android Studio</li>
 		</div>
 	</div>
 	<div class="footer">
-		<span id="connected">Connected with me:</span><br>
-		<span><a href="#" class="fa fa-facebook"></a></span>
+		<span id="connected">Connect with me:</span><br>
+		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
 		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
 		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span>
 	</div>
