--- a/projects.html
+++ b/projects.html
@@ -15,18 +15,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>WEI CHENG-projects</title>
+	<title>WEI CHENG | Projects</title>
 </head>
 <body id="body">
-	<div class="logo">
-		<img src="img/logo.png" alt="">
+	<div class="header">
+		<img class="logo" src="img/logo.png" alt="">
 		<br>
-		<nav class="navbar">
+		<div class="navbar">
 			<span><a href="index.html" class="btn_nav">About</a></span>
-			<span><a href="projects.html" class="light btn_nav" >Projects</a></span>
-			<span><a href="resume.html" class="btn_nav" >Resume</a></span>
-		</nav>
-	</div>
+			<span><a href="projects.html" class="light btn_nav">Projects</a></span>
+			<span><a href="resume.html" class="btn_nav">Artwork</a></span>
+		</div></div>
 	<div class="row">
 		<img class="project-type" src="img/app.png"/>
 		<div class="slideshow-container">
@@ -37,9 +36,7 @@
 		    <div class="project">
 		    	<h2>FamiFilm</h2>
 		    </div>
-		</div>
-	</div>
-	<br>
+		</div></div><br>
 	<div class="row">
 		<img class="project-type" src="img/web.png"/>
 		<div class="slideshow-container">
@@ -51,37 +48,30 @@
 		    	<h2>Kaohsiung Rapid Transit Co.</h2>
 		    	<h3>front-end develop</h3>
 		    </div>
-		</div>
-	</div>
-	<br>
+		</div></div><br>
 	<div class="row">
 		<img class="project-type" src="img/game.png"/>
 		<div class="slideshow-container">
 		    <div class="project">
 		    	<img class="project-size" src="projects/nsysuhero.png" alt="">
 		    	<h2>NSYSU hero</h2>
-		    	<h3>game UI Design</h3>
+		    	<h3>game UI design</h3>
 		    </div>
-		</div>
-	</div>
-	<br>
+		</div></div><br>
 	<div class="row">
 		<img class="project-type" src="img/video.png"/>
 		<div class="slideshow-container">
 		    <div class="project">
-		    	<h2>FamiFilm demo video</h2>
+		    	<img class="project-size" src="projects/video_famifilm.png" alt="">
+		    	<h2>FamiFilm DEMO Video</h2>
+		    	<h3>video editing</h3>
 		    </div>
-		    <div class="project">
-		    	<h2>MSP FAQ video</h2>
-		    </div>
-		</div>
-	</div>
+		</div></div>
 
 	<div class="footer">
-		<span id="connected">Connected with me:</span><br>
-		<span><a href="#" class="fa fa-facebook"></a></span>
+		<span id="connected">Connect with me:</span><br>
+		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
 		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
-		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span>
-	</div>
+		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span></div>
 </body>
 </html>
