--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -16,25 +17,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>WEI CHENG-resume</title>
+	<title>WEI CHENG | Arts</title>
 </head>
 <body id="body">
-	<div class="logo">
-		<img src="img/logo.png" alt="">
+	<div class="header">
+		<img class="logo" src="img/logo.png" alt="">
 		<br>
-		<nav id="navbar">
-			<span><a href="index.html" class="btn_nav">About</a></span>
+		<div class="navbar">
+			<span><a href="index.html" class="light btn_nav">About</a></span>
 			<span><a href="projects.html" class="btn_nav">Projects</a></span>
-		<span><a href="resume.html" class="light btn_nav">Resume</a></span>
-		</nav>
+			<span><a href="resume.html" class="btn_nav">Artwork</a></span>
+		</div>
 	</div>
 	<div class="center">
-		<embed src="CHENG WEI RESUME.pdf" width="800px" height="1180px" />
+
 	</div>
 	<div class="footer">
-<!-- 		<span><a href="#" class="fa fa-facebook"></a></span>
+		<span id="connected">Connect with me:</span><br>
+		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
 		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
-		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span> -->
+		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span>
 	</div>
 </body>
 </html>
