--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,10 @@
 		<img class="logo" src="img/logo.png" alt="">
 		<br>
 		<div class="navbar">
-			<span><a href="index.html" class="light btn_nav">About</a></span>
-			<span><a href="projects.html" class="btn_nav">Projects</a></span>
-			<span><a href="resume.html" class="btn_nav">Artwork</a></span>
-		</div>
-	</div>
+			<span class="btn_nav"><a href="index.html">About</a></span>
+			<span class="btn_nav"><a href="projects.html" class="light">Project</a></span>
+			<span class="btn_nav"><a href="resume.html">Artwork</a></span>
+		</div></div>
 	<div class="center">
 
 	</div>
