--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,9 @@
 	<title>WEI CHENG | Projects</title>
 </head>
 <body id="body">
+	<div class="drawer-toggle-label"></div>
 	<div class="header">
 		<img class="logo" src="img/logo.png" alt="">
-		<br>
 		<div class="navbar">
 			<span class="btn_nav"><a href="index.html">About</a></span>
 			<span class="btn_nav"><a href="projects.html" class="light">Projects</a></span>
@@ -57,7 +57,7 @@
 	<div class="row">
 		<img class="project-type" src="img/game.png"/>
 		<div class="slideshow-container">
-		    <div class="project">
+		    <div class="project" onclick="openProject('game')">
 		    	<img class="project-size" src="projects/nsysuhero.png" alt="">
 		    	<h2>NSYSU hero</h2>
 		    	<h3>Unity game UI design</h3>
@@ -66,7 +66,7 @@
 	<div class="row">
 		<img class="project-type" src="img/video.png"/>
 		<div class="slideshow-container">
-		    <div class="project" onclick="openProject()">
+		    <div class="project" onclick="openProject('video_famifilm')">
 		    	<img class="project-size" src="projects/video_famifilm.png" alt="">
 		    	<h2>FamiFilm DEMO Video</h2>
 		    	<h3>video editing</h3>
@@ -85,13 +85,34 @@
 		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
 		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
 		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span></div>
-
 	<div class="project-content">
 		<span class="close" onclick="closeProject()">&times;</span>
-		<div id="video_famifilm">
-			<h4>FamiFilm DEMO Video</h4>
-			<div class="banner">				
-				<video width="80%" height="80%" controls>
+			<div class="detail" id="game">
+				<div class="banner">
+				<h4>NSYSU Hero - Unity 2D Game</h4>
+					<img class="banner-img" src="projects/nsysuhero_instruc.png" alt="">
+					<img class="banner-img" src="projects/nsysuhero_game.png" alt="">
+				</div>
+				<div class="column">
+					<span class="title">Position</span><br>
+					Game Scene Design<br>
+					User Interface Design
+				</div>
+				<div class="column">
+					<span class="title">Tools</span><br>
+					Adobe Photoshop<br>
+					Unity
+				</div>
+
+				<div class="column">
+					<span class="title">Description</span><br>
+					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand<br>This 2D game is 
+				</div>
+			</div>
+		<div class="detail" id="video_famifilm">
+			<div class="banner">
+			<h4>FamiFilm DEMO Video - NSYSU graduation project</h4>
+				<video id="vid" controls>
 		  			<source src="projects/video_famifilm_demo.mp4" type="video/mp4">
 				</video>
 			</div>
@@ -107,5 +128,6 @@
 			</div>
 		</div>
 	</div>
+	<div id="overlay" onclick="closeProject()"></div>
 </body>
 </html>
