--- a/index.html
+++ b/index.html
@@ -17,16 +17,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>WEI CHENG | About</title>
 </head>
 <body id="body">
+	<div class="drawer">
+		<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="resume.html">ARTWORK</a></span>
+	</div>
+	<div class="nav-icon">
+	  <span></span> <span></span> <span></span> <span></span>
+	</div>
+
 	<div class="header">
 		<img class="logo" src="img/logo.png" alt="">
-		<br>
 		<div class="navbar">
-			<span class="btn_nav"><a href="index.html">About</a></span>
-			<span class="btn_nav"><a href="projects.html" class="light">Projects</a></span>
-			<span class="btn_nav"><a href="resume.html">Artwork</a></span>
+			<span class="btn_nav"><a href="index.html" class="light">ABOUT</a></span>
+			<span class="btn_nav"><a href="projects.html">PROJECTS</a></span>
+			<span class="btn_nav"><a href="resume.html">ARTWORK</a></span>
 		</div></div>
 	<div class="content">
 		<div id="about_text">
