--- a/projects.html
+++ b/projects.html
@@ -11,21 +11,30 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
 	<script src="scroll.js"></script>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>WEI CHENG | Projects</title>
 </head>
 <body id="body">
-	<div class="drawer-toggle-label"></div>
+	<div class="drawer">
+		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
+		<span class="drawer_btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="resume.html">ARTWORK</a></span>
+	</div>
+	<div class="nav-icon">
+	  <span></span> <span></span> <span></span> <span></span>
+	</div>
+
 	<div class="header">
 		<img class="logo" src="img/logo.png" alt="">
 		<div class="navbar">
-			<span class="btn_nav"><a href="index.html">About</a></span>
-			<span class="btn_nav"><a href="projects.html" class="light">Projects</a></span>
-			<span class="btn_nav"><a href="resume.html">Artwork</a></span>
+			<span class="btn_nav"><a href="index.html">ABOUT</a></span>
+			<span class="btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
+			<span class="btn_nav"><a href="resume.html">ARTWORK</a></span>
 		</div></div>
 	<div class="row">
 		<img class="project-type" src="img/app.png"/>
@@ -106,7 +115,7 @@
 
 				<div class="column">
 					<span class="title">Description</span><br>
-					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand<br>This 2D game is 
+					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand. This 2D game was made in a coding club marathon of Department of Information Management. 
 				</div>
 			</div>
 		<div class="detail" id="video_famifilm">
