--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="resume.html">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,9 +32,9 @@
 	<div class="header">
 		<img class="logo" src="img/logo.png" alt="">
 		<div class="navbar">
-			<span class="btn_nav"><a href="index.html">ABOUT</a></span>
-			<span class="btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
-			<span class="btn_nav"><a href="resume.html">ARTWORK</a></span>
+			<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT ME</a></span>
+			<span class="btn_nav"><a href="projects.html" class="a_nav light">PROJECT</a></span>
+			<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
 		</div></div>
 	<div class="row">
 		<img class="project-type" src="img/app.png"/>
@@ -91,9 +91,10 @@
 
 	<div class="footer">
 		<span id="connected">Connect with me:</span><br>
-		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
-		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
-		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span></div>
+		<a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
+		<a href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
+		<a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a>
+	</div>
 	<div class="project-content">
 		<span class="close" onclick="closeProject()">&times;</span>
 			<div class="detail" id="game">
