--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="resume.html" class="light">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -33,18 +33,73 @@
 	<div class="header">
 		<img class="logo" src="img/logo.png" alt="">
 		<div class="navbar">
-			<span class="btn_nav"><a href="index.html">ABOUT</a></span>
-			<span class="btn_nav"><a href="projects.html">PROJECTS</a></span>
-			<span class="btn_nav"><a href="resume.html" class="light">ARTWORK</a></span>
+			<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT ME</a></span>
+			<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
+			<span class="btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
 		</div></div>
-	<div class="center">
+	<div class="center content">
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/oilpainting.jpg" width="300" height="200">
+		    </a>
+		    <h3>Oil Painting.jpg</h3>
+		  </div>
+		</div>
 
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/calligraphy.png"width="300" height="200">
+		    </a>
+		    <h3>calligraphy</h3>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/famifilm.png" width="300" height="200">
+		    </a>
+		    <h3>FamiFilm flyer</h3>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/ncpc.jpg" width="300" height="200">
+		    </a>
+		    <h3>NCPC poster</h3>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/careercourse.jpg" width="300" height="200">
+		    </a>
+		    <h3>Library Training Course poster</h3>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/tair.jpg" width="300" height="200">
+		    </a>
+		    <h3>TAIR poster</h3>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		      <img src="art/library.png" width="300" height="200">
+		    </a>
+		    <h3>Library Activity poster</h3>
+		  </div>
+		</div>
+		
 	</div>
 	<div class="footer">
 		<span id="connected">Connect with me:</span><br>
-		<span><a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook"></a></span>
-		<span><a href="https://github.com/ChengWei1010" class="fa fa-github"></a></span>
-		<span><a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin"></a></span>
+		<a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
+		<a href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
+		<a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a>
 	</div>
 </body>
 </html>
