--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<img id="avatar" src="img/avatar.png" alt="">
 		<h1>About Wei Cheng</h1>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for having interest to know me more. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am currently exchange at San Diego State University, California for one semester. 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for having interest to know me more. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am am going to exchange at San Diego State University, California for one semester in 2018 spring. 
 			<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism department. "Taking technologies into universities." is our main goal during internship.
 			<br><br>
