--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chivo-Regular">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -42,7 +42,7 @@
 		<img id="avatar" src="img/avatar.png" alt="">
 		<h1>About Wei Cheng</h1>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for having interest to know me more. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am am going to exchange at San Diego State University, California for one semester in 2018 spring. 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for visiting my website. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am going to exchange at San Diego State University, California for one semester in spring 2018. 
 			<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism department. "Taking technologies into universities." is our main goal during internship.
 			<br><br>
@@ -65,9 +65,9 @@
 			<h1>Programming</h1>
 			<li>HTML, CSS, javascript</li>
 			<li>java</li>
-			<li>MySQL</li>
-			<li>SQLite</li>
-			<li>Firebase</li>
+			<li>MySQL database</li>
+			<li>SQLite database</li>
+			<li>Firebase database</li>
 			<br>
 
 			<h1>Tools</h1>
