update css style and projects

--- a/artwork.html
+++ b/artwork.html
@@ -30,19 +30,20 @@
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
-	<div class="header">
+	<header>
 		<img class="logo" src="img/logo.png" alt="">
-		<div class="navbar">
-			<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT ME</a></span>
-			<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
-			<span class="btn_nav"><a href="resume.html" class="light">ARTWORK</a></span>
-		</div></div>
-	<div class="center content">
+	</header>
+	<nav>
+		<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT ME</a></span>
+		<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
+		<span class="btn_nav"><a href="artwork.html" class="a_nav light">ARTWORK</a></span>
+	</nav>
+	<article>
 		<div class="responsive">
 		  <div class="gallery">
 		      <img src="art/oilpainting.jpg" width="300" height="200">
 		    </a>
-		    <h3>Oil Painting.jpg</h3>
+		    <h3>Oil Painting</h3>
 		  </div>
 		</div>
 
@@ -93,13 +94,13 @@
 		    <h3>Library Activity poster</h3>
 		  </div>
 		</div>
-		
-	</div>
-	<div class="footer">
-		<span id="connected">Connect with me:</span><br>
-		<a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
-		<a href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
-		<a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a>
-	</div>
+	</article>
+		<footer>
+		<span>Connect with me:</span><br>
+		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
+		<span class="copyright">made by WEI CHENG, 2017.</span><br>
+	</footer>
 </body>
 </html>
