--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chivo-Regular">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -11,9 +11,8 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-	<script src="scroll.js"></script>
-
+<!-- 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
+	<script src="scroll.js"></script> -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -29,17 +28,18 @@
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
-
-	<div class="header">
+	<header>
 		<img class="logo" src="img/logo.png" alt="">
-		<div class="navbar">
-			<span class="btn_nav"><a href="index.html" class="a_nav light">ABOUT ME</a></span>
-			<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
-			<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
-		</div></div>
-	<div class="content">
+	</header>
+	<nav>
+		<span class="btn_nav"><a href="index.html" class="a_nav light">ABOUT ME</a></span>
+		<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
+		<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
+	</nav>
+
+	<article>
 		<div id="about_text">
-		<img id="avatar" src="img/avatar.png" alt="">
+		<img id="avatar" src="img/wei.jpg" alt="">
 		<h1>About Wei Cheng</h1>
 			<p>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for visiting my website. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am going to exchange at San Diego State University, California for one semester in spring 2018. 
@@ -55,10 +55,10 @@
 		</div>
 		<div id="skill">
 			<h1>Education</h1>
-			<h4>B.A. of Information Management System<br></h4>
+			<b>B.A. of Information Management System<br></b>
 			National Sun-Yat sen University, Kaohsiung Taiwan<br>
 			<br>
-			<h4>Exchange Student of Information Managament<br></h4>
+			<b>Exchange Student of Information Managament<br></b>
 			San Diego State University, California US
 			<br>
 
@@ -78,12 +78,13 @@
 			<li>iMovie</li>
 			<li>Android Studio</li>
 		</div>
-	</div>
-	<div class="footer">
-		<span id="connected">Connect with me:</span><br>
-		<a href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
-		<a href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
-		<a href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a>
-	</div>
+	</article>
+	<footer>
+		<span>Connect with me:</span><br>
+		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
+		<span class="copyright">made by WEI CHENG, 2017.</span><br>
+	</footer>
 </body>
 </html>
