modify mobile version

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-<!-- 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
-	<script src="scroll.js"></script> -->
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
+	<script src="scroll.js"></script>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
